# nn-experiments

./: .gitignore  attention_trick.ipynb  convert_imagenet.ipynb  model.ipynb  pyproject.toml  pytorch_imagenet.ipynb  requirements.txt
experiments/attention/: attention_trick.ipynb
experiments/imagenet/: convert_imagenet.ipynb
experiments/pytorch_effnet/: pytorch_efficientnet_train.py  pytorch_imagenet.ipynb
experiments/residuals/: check_http_auth.py  effnet_aug.py  gen_residuals.py  model.py  plots.py  residual.ipynb  results.txt  results2.txt  results3.txt  training.py  utils.py
experiments/tinygrad_effnet/: show_profile_stats.py  tg_efficientnet.py  tinygrad_efficientnet_train.py
nnutils/: determinism.py  imagenet.py  metrics.py  random.py
nnutils/models/: efficientnet.py  resnet.py  resnet_generalized.py
tests/: test_models.py  test_moving_average.py
